--- a/Resources/Private/Templates/Post/Latest.html
+++ b/Resources/Private/Templates/Post/Latest.html
@@ -10,7 +10,7 @@
 		</div>
 	</f:comment>
 
-	<div id="blog" class="grid-layout post-3-columns m-b-30 blog-list" data-item="post-item">
+	<div id="typo3_blog" class="grid-layout post-3-columns m-b-30 typo3_blog-list" data-item="post-item">
 
 		<f:for each="{posts}" as="post">
 
