--- a/Resources/Private/Templates/Post/List.html
+++ b/Resources/Private/Templates/Post/List.html
@@ -18,12 +18,12 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
     <f:flashMessages />
 
-    <table class="tx_blog">
+    <table class="tx_typo3_blog">
         <tr>
-            <th><f:translate key="tx_blog_domain_model_post.title" /></th>
-            <th><f:translate key="tx_blog_domain_model_post.teaser" /></th>
-            <th><f:translate key="tx_blog_domain_model_post.images" /></th>
-            <th><f:translate key="tx_blog_domain_model_post.content" /></th>
+            <th><f:translate key="tx_typo3blog_domain_model_post.title" /></th>
+            <th><f:translate key="tx_typo3blog_domain_model_post.teaser" /></th>
+            <th><f:translate key="tx_typo3blog_domain_model_post.images" /></th>
+            <th><f:translate key="tx_typo3blog_domain_model_post.content" /></th>
             <th></th>
             <th></th>
         </tr>
