--- a/Resources/Private/Templates/Post/Show.html
+++ b/Resources/Private/Templates/Post/Show.html
@@ -19,8 +19,8 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
         <!-- content -->
         <div class="contentxx col-lg-12xx">
-            <!-- Blog -->
-            <div id="blog" class="single-post">
+            <!-- Typo3Blog -->
+            <div id="typo3_blog" class="single-post">
                 <!-- Post single item-->
                 <div class="post-item">
                     <div class="post-item-wrap">
