fix typoscript settings

--- a/Resources/Private/Templates/Post/List.html
+++ b/Resources/Private/Templates/Post/List.html
@@ -18,7 +18,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
     <f:flashMessages />
 
-    <table class="tx_typo3_blog">
+    <table class="tx_typo3blog_list">
         <tr>
             <th><f:translate key="tx_typo3blog_domain_model_post.title" /></th>
             <th><f:translate key="tx_typo3blog_domain_model_post.teaser" /></th>
