update template for list view

--- a/Resources/Private/Templates/Post/Latest.html
+++ b/Resources/Private/Templates/Post/Latest.html
@@ -5,7 +5,7 @@
 
 	<f:comment>
 		<div class="heading-text heading-line text-center" data-animate="fadeIn">
-			<h2>Blog</h2>
+			<h2>Neue Blog Beiträge</h2>
 		</div>
 	</f:comment>
 
