--- a/Resources/Private/Templates/Post/Latest.html
+++ b/Resources/Private/Templates/Post/Latest.html
@@ -46,7 +46,7 @@
 						</span>
 						-->
 						<h2><a href="{urlSingleView}">{post.title}</a></h2>
-						<f:format.html parseFuncTSPath="">{post.teaser}</f:format.html>
+						<f:format.html>{post.teaser}</f:format.html>
 						<a href="{urlSingleView}" class="item-link">
 							weiterlesen
 							<i class="icon-chevron-right"></i>
