--- a/Resources/Private/Templates/Post/Show.html
+++ b/Resources/Private/Templates/Post/Show.html
@@ -50,7 +50,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
                                     <div class="margin-bottom">
                                         <f:format.html>{post.teaser}</f:format.html>
                                     </div>
-                                    <f:format.raw>{post.content}</f:format.raw>
+                                    <f:format.html>{post.content}</f:format.html>
                                 </div>
 
                                 <div class="post-navigation">
